--- a/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
@@ -25,7 +25,7 @@
 <script type="text/javascript">
 //<![CDATA[
     var BASE_URL = '<?= $this->getUrl('*') ?>';
-    var SKIN_URL = '<?= $this->jsQuoteEscape($this->getSkinUrl()) ?>';
+    var SKIN_URL = '<?= $this->getSkinUrl() ?>';
     var FORM_KEY = '<?= $this->getFormKey() ?>';
 //]]>
 </script>
