--- a/app/design/frontend/base/default/template/bundle/catalog/product/view/type/bundle/option/checkbox.phtml
+++ b/app/design/frontend/base/default/template/bundle/catalog/product/view/type/bundle/option/checkbox.phtml
@@ -5,33 +5,39 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
+/** @var Mage_Bundle_Block_Catalog_Product_View_Type_Bundle_Option_Checkbox $this */
+$option = $this->getOption();
+$selections = $option->getSelections();
 ?>
-
-<?php /** @var Mage_Bundle_Block_Catalog_Product_View_Type_Bundle_Option_Checkbox $this */ ?>
-<?php $_option = $this->getOption() ?>
-<?php $_selections = $_option->getSelections() ?>
-<dt><label<?php if ($_option->getRequired()) echo ' class="required"' ?>><?= $this->escapeHtml($_option->getTitle()) ?><?php if ($_option->getRequired()) echo '<em>*</em>' ?></label></dt>
-<dd<?php if ($_option->decoratedIsLast){?> class="last"<?php }?>>
+<dt>
+    <label<?= $option->getRequired() ? ' class="required"' : '' ?>>
+        <?= $this->escapeHtml($option->getTitle()) ?>
+    </label>
+</dt>
+<dd>
     <div class="input-box">
-    <?php if (count($_selections) == 1 && $_option->getRequired()): ?>
-        <?= $this->getSelectionQtyTitlePrice($_selections[0]) ?>
-        <input type="hidden" name="bundle_option[<?= $_option->getId() ?>]" value="<?= $_selections[0]->getSelectionId() ?>"/>
+    <?php if (count($selections) == 1 && $option->getRequired()): ?>
+        <?= $this->getSelectionQtyTitlePrice($selections[0]) ?>
+        <input type="hidden" name="bundle_option[<?= $option->getId() ?>]" value="<?= $selections[0]->getSelectionId() ?>"/>
     <?php else: ?>
         <ul class="options-list">
-        <?php foreach($_selections as $_selection): ?>
-            <li><input onclick="bundle.changeSelection(this)" class="change-container-classname checkbox bundle-option-<?= $_option->getId() ?> <?php if ($_option->getRequired()) echo 'validate-one-required-by-name' ?>" id="bundle-option-<?= $_option->getId() ?>-<?= $_selection->getSelectionId() ?>" type="checkbox" name="bundle_option[<?= $_option->getId() ?>][]"<?php if ($this->_isSelected($_selection)) echo ' checked="checked"' ?><?php if (!$_selection->isSaleable()) echo ' disabled="disabled"' ?> value="<?= $_selection->getSelectionId() ?>"/>
-                <span class="label"><label for="bundle-option-<?= $_option->getId() ?>-<?= $_selection->getSelectionId() ?>"><?= $this->getSelectionQtyTitlePrice($_selection) ?></label></span>
-                <?php if($_option->getRequired()): ?>
-                    <?= $this->setValidationContainer('bundle-option-'.$_option->getId().'-'.$_selection->getSelectionId(), 'bundle-option-'.$_option->getId().'-container') ?>
-                <?php endif ?>
+        <?php foreach($selections as $selection): ?>
+            <li>
+                <?php $checked = $this->_isSelected($selection) ? ' checked="checked"' : '' ?>
+                <?php $disabled = !$selection->isSaleable() ? ' disabled="disabled"' : '' ?>
+                <input type="checkbox" class="change-container-classname checkbox bundle-option-<?= $option->getId() ?><?= $option->getRequired() ? ' validate-one-required-by-name' : '' ?>" id="bundle-option-<?= $option->getId() ?>-<?= $selection->getSelectionId() ?>" name="bundle_option[<?= $option->getId() ?>][]"<?= $checked ?><?= $disabled ?> value="<?= $selection->getSelectionId() ?>" onclick="bundle.changeSelection(this)"/>
+                <span class="label"><label for="bundle-option-<?= $option->getId() ?>-<?= $selection->getSelectionId() ?>"><?= $this->getSelectionQtyTitlePrice($selection) ?></label></span>
+            <?php if ($option->getRequired()): ?>
+                <?= $this->setValidationContainer("bundle-option-{$option->getId()}-{$selection->getSelectionId()}", "bundle-option-{$option->getId()}-container") ?>
+            <?php endif ?>
             </li>
         <?php endforeach ?>
         </ul>
-        <div id="bundle-option-<?= $_option->getId() ?>-container"></div>
+        <div id="bundle-option-<?= $option->getId() ?>-container"></div>
     <?php endif ?>
     </div>
 </dd>
