--- a/app/design/frontend/base/default/template/bundle/catalog/product/view/type/bundle/option/radio.phtml
+++ b/app/design/frontend/base/default/template/bundle/catalog/product/view/type/bundle/option/radio.phtml
@@ -5,55 +5,59 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
+/** @var Mage_Bundle_Block_Catalog_Product_View_Type_Bundle_Option_Radio $this */
+$option = $this->getOption();
+$selections  = $option->getSelections();
+$default     = $option->getDefaultSelection();
+list($defaultQty, $canChangeQty) = $this->_getDefaultValues();
+$tierPriceHtml = '';
 ?>
-
-<?php /** @var Mage_Bundle_Block_Catalog_Product_View_Type_Bundle_Option_Radio $this */ ?>
-<?php $_option = $this->getOption(); ?>
-<?php $_selections  = $_option->getSelections(); ?>
-<?php $_default     = $_option->getDefaultSelection(); ?>
-<?php list($_defaultQty, $_canChangeQty) = $this->_getDefaultValues(); ?>
-<?php $tierPriceHtml = ''; ?>
-
 <dt>
-    <label<?php if ($_option->getRequired()) echo ' class="required"' ?>><?= $this->escapeHtml($_option->getTitle()) ?><?php if ($_option->getRequired()) echo '<em>*</em>' ?></label>
+    <label<?= $option->getRequired() ? ' class="required"' : '' ?>>
+        <?= $this->escapeHtml($option->getTitle()) ?>
+    </label>
 </dt>
-<dd<?php if ($_option->decoratedIsLast){?> class="last"<?php }?>>
+<dd>
     <div class="input-box">
-        <?php /** @var Mage_Catalog_Model_Product $_selection */ ?>
         <?php if ($this->_showSingle()): ?>
-            <?= $this->getSelectionTitlePrice($_selections[0]) ?>
-            <?php if ($_selections[0]->getSelectionCanChangeQty()): ?>
-                <?php $tierPriceHtml = $this->getTierPriceHtml($_selections[0]); ?>
+            <?= $this->getSelectionTitlePrice($selections[0]) ?>
+            <?php if ($selections[0]->getSelectionCanChangeQty()): ?>
+                <?php $tierPriceHtml = $this->getTierPriceHtml($selections[0]); ?>
         <?php endif ?>
-        <input type="hidden" name="bundle_option[<?= $_option->getId() ?>]" value="<?= $_selections[0]->getSelectionId() ?>" />
+        <input type="hidden" name="bundle_option[<?= $option->getId() ?>]" value="<?= $selections[0]->getSelectionId() ?>" />
     <?php else: ?>
         <ul class="options-list">
-        <?php if (!$_option->getRequired()): ?>
-            <li><input type="radio" onclick="bundle.changeSelection(this)" class="radio" id="bundle-option-<?= $_option->getId() ?>" name="bundle_option[<?= $_option->getId() ?>]"<?= ($_default && $_default->isSalable())?'':' checked="checked" ' ?> value=""/>
-            <span class="label"><label for="bundle-option-<?= $_option->getId() ?>"><?= $this->__('None') ?></label></span>
+        <?php if (!$option->getRequired()): ?>
+            <li>
+                <input type="radio" class="radio" id="bundle-option-<?= $option->getId() ?>" name="bundle_option[<?= $option->getId() ?>]"<?= $default?->isSalable() ? '' : ' checked="checked"' ?> value="" onclick="bundle.changeSelection(this)"/>
+                <span class="label"><label for="bundle-option-<?= $option->getId() ?>"><?= $this->__('None') ?></label></span>
             </li>
         <?php endif ?>
-        <?php foreach ($_selections as $_selection): ?>
-            <?php if ($_selection->getSelectionCanChangeQty() && $this->_isSelected($_selection)): ?>
-                <?php $tierPriceHtml = $this->getTierPriceHtml($_selection); ?>
+        <?php foreach ($selections as $selection): ?>
+            <?php if ($selection->getSelectionCanChangeQty() && $this->_isSelected($selection)): ?>
+                <?php $tierPriceHtml = $this->getTierPriceHtml($selection); ?>
             <?php endif ?>
-            <li><input type="radio" onclick="bundle.changeSelection(this)" class="radio<?= $_option->getRequired()?' validate-one-required-by-name':'' ?> change-container-classname" id="bundle-option-<?= $_option->getId() ?>-<?= $_selection->getSelectionId() ?>" name="bundle_option[<?= $_option->getId() ?>]"<?php if ($this->_isSelected($_selection)) echo ' checked="checked"' ?><?php if (!$_selection->isSaleable()) echo ' disabled="disabled"' ?>value="<?= $_selection->getSelectionId() ?>"/>
-            <span class="label"><label for="bundle-option-<?= $_option->getId() ?>-<?= $_selection->getSelectionId() ?>"><?= $this->getSelectionTitlePrice($_selection) ?></label></span>
-            <?php if ($_option->getRequired()): ?>
-                <?= $this->setValidationContainer('bundle-option-'.$_option->getId().'-'.$_selection->getSelectionId(), 'bundle-option-'.$_option->getId().'-container') ?>
+                <li>
+                <?php $checked = $this->_isSelected($selection) ? ' checked="checked"' : '' ?>
+                <?php $disabled = !$selection->isSaleable() ? ' disabled="disabled"' : '' ?>
+                <input type="radio" class="change-container-classname radio bundle-option-<?= $option->getId() ?><?= $option->getRequired() ? ' validate-one-required-by-name' : '' ?>" id="bundle-option-<?= $option->getId() ?>-<?= $selection->getSelectionId() ?>" name="bundle_option[<?= $option->getId() ?>]"<?= $checked ?><?= $disabled ?> value="<?= $selection->getSelectionId() ?>" onclick="bundle.changeSelection(this)"/>
+                <span class="label"><label for="bundle-option-<?= $option->getId() ?>-<?= $selection->getSelectionId() ?>"><?= $this->getSelectionTitlePrice($selection) ?></label></span>
+            <?php if ($option->getRequired()): ?>
+                <?= $this->setValidationContainer("bundle-option-{$option->getId()}-{$selection->getSelectionId()}", "bundle-option-{$option->getId()}-container") ?>
             <?php endif ?>
             </li>
         <?php endforeach ?>
         </ul>
-        <div id="bundle-option-<?= $_option->getId() ?>-container"></div>
+        <div id="bundle-option-<?= $option->getId() ?>-container"></div>
     <?php endif ?>
     </div>
-    <span id="bundle-option-<?= $_option->getId() ?>-tier-prices"> <?= $tierPriceHtml ?></span>
+    <span id="bundle-option-<?= $option->getId() ?>-tier-prices"> <?= $tierPriceHtml ?></span>
     <span class="qty-holder">
-        <label for="bundle-option-<?= $_option->getId() ?>-qty-input"><?= $this->__('Qty:') ?>&nbsp;</label><input onkeyup="bundle.changeOptionQty(this, event)" onblur="bundle.changeOptionQty(this, event)" <?php if (!$_canChangeQty) echo ' disabled="disabled"' ?> id="bundle-option-<?= $_option->getId() ?>-qty-input" class="input-text qty<?php if (!$_canChangeQty) echo ' qty-disabled' ?>" type="text" name="bundle_option_qty[<?= $_option->getId() ?>]" value="<?= $_defaultQty ?>"/>
+        <label for="bundle-option-<?= $option->getId() ?>-qty-input"><?= $this->__('Qty:') ?>&nbsp;</label>
+        <input onkeyup="bundle.changeOptionQty(this, event)" onblur="bundle.changeOptionQty(this, event)"<?= !$canChangeQty ? ' disabled="disabled"' : '' ?> id="bundle-option-<?= $option->getId() ?>-qty-input" class="input-text qty<?= !$canChangeQty ? ' qty-disabled' : '' ?>" type="text" pattern="\d*(\.\d+)?" name="bundle_option_qty[<?= $option->getId() ?>]" value="<?= $defaultQty ?>"/>
     </span>
 </dd>
