--- a/app/design/frontend/base/default/template/bundle/catalog/product/view/type/bundle/option/select.phtml
+++ b/app/design/frontend/base/default/template/bundle/catalog/product/view/type/bundle/option/select.phtml
@@ -5,46 +5,47 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
+/** @var Mage_Bundle_Block_Catalog_Product_View_Type_Bundle_Option_Select $this */
+$option = $this->getOption();
+$selections = $option->getSelections();
+list($defaultQty, $canChangeQty) = $this->_getDefaultValues();
+$tierPriceHtml = '';
 ?>
-
-<?php /** @var Mage_Bundle_Block_Catalog_Product_View_Type_Bundle_Option_Select $this */ ?>
-<?php $_option      = $this->getOption(); ?>
-<?php $_selections  = $_option->getSelections(); ?>
-<?php $_default     = $_option->getDefaultSelection(); ?>
-<?php list($_defaultQty, $_canChangeQty) = $this->_getDefaultValues(); ?>
-<?php $tierPriceHtml = ''; ?>
-
 <dt>
-    <label<?php if ($_option->getRequired()) echo ' class="required"' ?>><?= $this->escapeHtml($_option->getTitle()) ?><?php if ($_option->getRequired()) echo '<em>*</em>' ?></label>
+    <label for="bundle-option-<?= $option->getId() ?>"<?= $option->getRequired() ? ' class="required"' : '' ?>>
+        <?= $this->escapeHtml($option->getTitle()) ?>
+    </label>
 </dt>
-<dd<?php if ($_option->decoratedIsLast){?> class="last"<?php }?>>
+<dd>
     <div class="input-box">
-    <?php /** @var Mage_Catalog_Model_Product $_selection*/ ?>
     <?php if ($this->_showSingle()): ?>
-        <?= $this->getSelectionTitlePrice($_selections[0]) ?>
-        <?php if ($_selections[0]->getSelectionCanChangeQty()): ?>
-            <?php $tierPriceHtml = $this->getTierPriceHtml($_selections[0]); ?>
+        <?= $this->getSelectionTitlePrice($selections[0]) ?>
+        <?php if ($selections[0]->getSelectionCanChangeQty()): ?>
+            <?php $tierPriceHtml = $this->getTierPriceHtml($selections[0]); ?>
         <?php endif ?>
-        <input type="hidden" name="bundle_option[<?= $_option->getId() ?>]" value="<?= $_selections[0]->getSelectionId() ?>"/>
+        <input type="hidden" name="bundle_option[<?= $option->getId() ?>]" value="<?= $selections[0]->getSelectionId() ?>"/>
     <?php else: ?>
-        <select onchange="bundle.changeSelection(this)" id="bundle-option-<?= $_option->getId() ?>" name="bundle_option[<?= $_option->getId() ?>]" class="bundle-option-<?= $_option->getId() ?><?php if ($_option->getRequired()) echo ' required-entry' ?> bundle-option-select change-container-classname">
+        <select onchange="bundle.changeSelection(this)" id="bundle-option-<?= $option->getId() ?>" name="bundle_option[<?= $option->getId() ?>]" class="bundle-option-<?= $option->getId() ?><?= $option->getRequired() ? ' required-entry' : '' ?> bundle-option-select change-container-classname">
             <option value=""><?= $this->__('Choose a selection...') ?></option>
-        <?php foreach ($_selections as $_selection): ?>
-            <?php if ($_selection->getSelectionCanChangeQty() && $this->_isSelected($_selection)): ?>
-                <?php $tierPriceHtml = $this->getTierPriceHtml($_selection); ?>
+        <?php /** @var Mage_Catalog_Model_Product $selection */ ?>
+        <?php foreach ($selections as $selection): ?>
+            <?php $selected = $this->_isSelected($selection) ? ' selected="selected"' : '' ?>
+            <?php $disabled = !$selection->isSaleable() ? ' disabled="disabled"' : '' ?>
+            <?php if ($selection->getSelectionCanChangeQty() && $this->_isSelected($selection)): ?>
+                <?php $tierPriceHtml = $this->getTierPriceHtml($selection); ?>
             <?php endif ?>
-            <option value="<?= $_selection->getSelectionId() ?>"<?php if ($this->_isSelected($_selection)) echo ' selected="selected"' ?><?php if (!$_selection->isSaleable()) echo ' disabled="disabled"' ?>><?= $this->getSelectionTitlePrice($_selection, false) ?></option>
+            <option value="<?= $selection->getSelectionId() ?>"<?= $selected ?><?= $disabled ?>><?= $this->getSelectionTitlePrice($selection, false) ?></option>
         <?php endforeach ?>
         </select>
     <?php endif ?>
     </div>
-    <span id="bundle-option-<?= $_option->getId() ?>-tier-prices"> <?= $tierPriceHtml ?></span>
+    <span id="bundle-option-<?= $option->getId() ?>-tier-prices"> <?= $tierPriceHtml ?></span>
     <span class="qty-holder">
-        <label for="bundle-option-<?= $_option->getId() ?>-qty-input"><?= $this->__('Qty:') ?>&nbsp;</label>
-        <input onkeyup="bundle.changeOptionQty(this, event)" onblur="bundle.changeOptionQty(this, event)" <?php if (!$_canChangeQty) echo ' disabled="disabled"' ?> id="bundle-option-<?= $_option->getId() ?>-qty-input" class="input-text qty<?php if (!$_canChangeQty) echo ' qty-disabled' ?>" type="text" pattern="\d*(\.\d+)?" name="bundle_option_qty[<?= $_option->getId() ?>]" value="<?= $_defaultQty ?>"/>
+        <label for="bundle-option-<?= $option->getId() ?>-qty-input"><?= $this->__('Qty:') ?>&nbsp;</label>
+        <input onkeyup="bundle.changeOptionQty(this, event)" onblur="bundle.changeOptionQty(this, event)"<?= !$canChangeQty ? ' disabled="disabled"' : '' ?> id="bundle-option-<?= $option->getId() ?>-qty-input" class="input-text qty<?= !$canChangeQty ? ' qty-disabled' : '' ?>" type="text" pattern="\d*(\.\d+)?" name="bundle_option_qty[<?= $option->getId() ?>]" value="<?= $defaultQty ?>"/>
     </span>
 </dd>
