Work on Mobile, Time inputs, etc

--- a/app/design/frontend/base/default/template/catalog/product/view/options/type/date.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/options/type/date.phtml
@@ -18,27 +18,19 @@ $optionId = $option->getId();
     <?= $this->getFormatedPrice() ?>
 </dt>
 <dd>
-<?php if ($option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE_TIME || $option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE): ?>
-    <?= $this->getDateHtml() ?>
-
-    <?php if (!$this->useCalendar()): ?>
-    <script type="module">
-        const dateOption = productConfigure.opConfig.dateOption;
-        const reloadMonth = dateOption.reloadMonth.bind(dateOption);
-        document.getElementById('options_<?= $optionId ?>_month').addEventListener('change', reloadMonth);
-        document.getElementById('options_<?= $optionId ?>_year').addEventListener('change', reloadMonth);
-    </script>
-    <?php endif ?>
-<?php endif ?>
-
-<?php if ($option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE_TIME || $option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_TIME): ?>
-    <span class="time-picker"><?= $this->getTimeHtml() ?></span>
-<?php endif ?>
-
+    <?= $this->getHtml() ?>
     <input type="hidden" name="validate_datetime_<?= $optionId ?>" class="validate-datetime-<?= $optionId ?>" value="" />
 </dd>
 
-<script>
+<script type="module">
+<?php if (!$this->useCalendar() && ($option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE_TIME || $option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE)): ?>
+    const dateOption = productConfigure.opConfig.dateOption;
+    const reloadMonth = dateOption.reloadMonth.bind(dateOption);
+    document.getElementById('options_<?= $optionId ?>_month').addEventListener('change', reloadMonth);
+    document.getElementById('options_<?= $optionId ?>_year').addEventListener('change', reloadMonth);
+</script>
+<?php endif ?>
+
 <?php if ($option->getIsRequired()): ?>
     Validation.add(
         'validate-datetime-<?= $optionId ?>',
