Renamed maho_captcha to captcha

--- a/app/design/adminhtml/default/default/layout/captcha.xml
+++ b/app/design/adminhtml/default/default/layout/captcha.xml
@@ -2,13 +2,13 @@
 <layout version="0.1.0">
     <adminhtml_index_login>
         <reference name="form.additional.info">
-            <block type="core/template" template="maho/captcha/captcha.phtml"></block>
+            <block type="core/template" template="captcha/captcha.phtml"></block>
         </reference>
     </adminhtml_index_login>
     <adminhtml_index_forgotpassword>
         <reference name="form.additional.info">
             <reference name="form.additional.info">
-                <block type="core/template" template="maho/captcha/captcha.phtml"></block>
+                <block type="core/template" template="captcha/captcha.phtml"></block>
             </reference>
         </reference>
     </adminhtml_index_forgotpassword>
